--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,36 @@ h1{
 #section3{
     background-color: yellow;
 }
+h2 {
+    border: 2px solid #000000;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 5px;
+    z-index: 2;
+}
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.box {
+    border: 2px solid #000000;
+    background-color: aquamarine;
+    padding: 20px;
+    margin: 10px;
+}
+.box p {
+    margin-top: 50px;
+}
