--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h2 {
     background-color: aquamarine;
     padding: 20px;
     margin: 10px;
+    position: relative;
 }
 .box p {
     margin-top: 50px;
